code-server/service-code-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: code-server
  namespace: code-server
spec:
  type: ClusterIP
  ports:
    - name: code-server
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    application: code-server
    component: code-server
